# opc_ua

./: .gitignore
client_test_case/: CMakeLists.txt
client_test_case/include/: client.h  simatic.h
client_test_case/include/client/: client.h
client_test_case/include/log/: logger.h
client_test_case/include/opc/: open62541.h
client_test_case/include/simatic/: simatic.h
client_test_case/lib/zlog/: libzlog.so.1  zlog.conf
client_test_case/src/: main.c
client_test_case/src/client/: client.c
client_test_case/src/logger/: logger.c
client_test_case/src/open62541/: open62541.c
client_test_case/src/server/: server.c
client_test_case/src/simatic/: simatic.c
project_template/: CMakeLists.txt  clean.sh
project_template/src/: main.c
project_template/src/client/: client.c
project_template/src/open62541/: open62541.c
project_template/src/server/: server.c
